--- a/peripherals.html
+++ b/peripherals.html
@@ -116,7 +116,7 @@
   </div>
   
   <div class="header">
-    <img src="sales-sale.gif" alt="sales" width="200" height="200">
+    <img src="img/sales-sale.gif" alt="sales" width="200" height="200">
   </div>
 
   <div id="home" class="w3-content">
@@ -124,15 +124,15 @@
       <h1>Peripherals</h1>
       <div class="image-grid">
         <div class="product">
-          <img src="68b4557d-fff2-4bcd-8e9b-05547cce7edc.jpg" alt="Name1">
+          <img src="img\68b4557d-fff2-4bcd-8e9b-05547cce7edc.jpg" alt="Name1">
           <p>£120</p>
         </div>
         <div class="product">
-          <img src="EHYOqYZwj4pFhxmF6k5SxtVbaZtUnGQzWsQZfswt.webp" alt="Name2">
+          <img src="img/EHYOqYZwj4pFhxmF6k5SxtVbaZtUnGQzWsQZfswt.webp" alt="Name2">
           <p>£75</p>
         </div>
         <div class="product">
-          <img src="https___hybrismediaprod.blob.core.windows.net_sys-master-phoenix-images-container_h47_haf_9140846166046_viper-8khz-500x500.png" alt="Name3">
+          <img src="img/https___hybrismediaprod.blob.core.windows.net_sys-master-phoenix-images-container_h47_haf_9140846166046_viper-8khz-500x500.png" alt="Name3">
           <p>£90</p>
         </div>
       </div>
@@ -143,7 +143,7 @@
 
 </div>
 <div class="span-box">
-    <img src="ico-scan-trust-8813cef5da.png" alt="Trustpilot rating">
+    <img src="img/ico-scan-trust-8813cef5da.png" alt="Trustpilot rating">
     <span><strong>Rating on Trustpilot</strong></span>
 </div>
 
