Revert "(fix) content of homepage, misc"
This reverts commit b1eeb5c1ab959021dd8ccd44d3d705b282b34c6d.

--- a/Gaming pc's.html
+++ b/Gaming pc's.html
@@ -120,13 +120,13 @@
       <div id="members" class="w3-container w3-padding-32">
         <div class="gallery">
           <div class="gallery-item">
-            <img src="img/72526Image1.webp" alt="Name1"> £ 750
+            <img src="72526Image1.webp" alt="Name1"> £ 750
           </div>
           <div class="gallery-item">
-            <img src="img/GX11DYN_8f9c8c12-1533-4257-89e8-d99ca3d12d9a.png" alt="Name2">  £1500
+            <img src="GX11DYN_8f9c8c12-1533-4257-89e8-d99ca3d12d9a.png" alt="Name2">  £1500
           </div>
           <div class="gallery-item">
-            <img src="img/awd_dynamic_evo_white_pc.webp" alt="Name3"> £500
+            <img src="awd_dynamic_evo_white_pc.webp" alt="Name3"> £500
           </div>
         </div>
       </div>
@@ -134,7 +134,7 @@
   </div>
   
   <div class="span-box">
-    <img src="img/ico-scan-trust-8813cef5da.png" alt="Trustpilot rating">
+    <img src="ico-scan-trust-8813cef5da.png" alt="Trustpilot rating">
     <span><strong>Rating on Trustpilot</strong></span>
   </div>
 
